@@ -524,11 +524,17 @@ cp ~/projects/pki/icc/server/stores/iccr-ks.jks installer/property-files/src/mai
 Enable https in swarm:
 https://developer.jboss.org/thread/266633?_sscc=t
 
-HTTPS port prop in iccr-ctl is port+1, need change in iccj
-
 HTTPS can be disabled by passing nossl on commandline when launching iccr
 
 Checked in
+
+Do single port
+
+Fixed hardcoding of port number in iccr-ctl
+
+Fix hardcoding of keystore
+
+Added restart to iccr-ctl script
 
 todo:
 Discovery of existing IOTA nodes:
