@@ -10,7 +10,7 @@ iotaDownloadLink=http://188.138.57.93
 Change default value for IOTA download filename:
 iotaDownloadFilename=IRI-1.1.1.1.jar
 
-Changed iccr start cmd in start script to redir to log and run in background and capture pid
+Changed iccr start cmd in iccr-ctl script to redir to log and run in background and capture pid
 
 Fixed getNeighbor and getNodeInfo IOTA API calls
 
@@ -20,11 +20,15 @@ Added support to the iccr-ctl script to stop a running iccr process by passing "
 
 Added support to the iccr-ctl script to check status of the iccr process by passing "status" on the command line.
 
+Added support to the iccr-ctl script to restart iccr process by passing "restart" on the command line.
+
 Added support for disabling TLS (HTTPS). The iccr-ctl script can be passed "nossl" on the command line to disable ICCR using (TLS) HTTPS transport.
 
 Added support for configurable logging levels of the activity of the lower level wildfly swarm framework. The default is now "error", not very  verbose, only log framework errors. The iccr-ctl script can be passed either "info" or "debug" on the command line to cause increased logging output.
 
 Added self signed key store and trust store: iccr-ks.jks and iccr-ts.jks
+
+Fixed hardcoding of port number in iccr-ctl
 
 
 
